# lumina

./: .gitignore  README.md  pyproject.toml
docs/: api.md
docs/superpowers/plans/: 2026-06-16-lumina-phase1.md  2026-06-16-lumina-phase2.md  2026-06-16-phase4-cyberpunk-ui.md  (+2 more)
examples/: cli_demo.sh  model_analysis.py  project_demo.py  sample_data.csv  sklearn_tree.py  smoke_test.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  theme.ts  types.ts
src/lumina/: __init__.py  __main__.py  api.py  cli.py  config.py  loaders.py  server.py
src/lumina/core/: project.py  (+1 more)
src/modelview/: __init__.py  api.py  graph.py  loaders.py  server.py
tests/: conftest.py  test_api_experiments.py  test_cli.py  test_cli_evaluations.py  test_cli_experiments.py  test_dataset_csv.py  test_dataset_parquet.py  test_dataset_stats.py  test_datasets.py  test_deployments.py  test_evaluation_loader.py  test_evaluation_repositories.py  test_evaluation_schema.py  test_evaluation_service.py  test_evaluations_integration.py  test_experiments_integration.py  test_experiments_repositories.py  test_experiments_run.py  test_experiments_schema.py  test_experiments_service.py  test_flop_analyzer.py  test_graph.py  test_loaders.py  test_log_adapters.py  test_memory_analyzer.py  test_model_stats.py  test_param_analyzer.py  test_project.py  test_server.py  test_server_datasets.py  test_server_evaluations.py  test_server_experiments.py  test_shape_analyzer.py  test_simple_parser.py  test_sklearn_parser.py  test_storage.py  test_tensorboard_adapter.py
(+80 files in other folders)
