[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumina"
version = "0.1.0"
description = "A Python library for visualizing model structures in the browser."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "polars>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
lumina = "lumina.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lumina"]
